fix navbar spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 
 *{
     font-family: "Rubik", serif;
+    padding:0;
+    margin:0;
 }
 
 #Navbar {
@@ -10,7 +12,6 @@
     position: sticky;
     top:0;
     min-width: 100%;  
-    display: flex;
 }
 
 #DTC06 {
@@ -20,27 +21,32 @@
     line-height: 3vh;
     color: #F4C949;
 }
-#navbarSupportedContent{
-    display: flex;
-    min-width: 20%;
+#NavLinks{
+    display:flex;
+    flex-direction: row;
+    gap:1em;
+    padding-right:0.2em;
+    
 }
 #NavButtons{
     display: flex;
-    gap:1em;
+    gap:0.5em;
     min-width: 25%;
     justify-content: end;
 
 }
 #Map {
-    margin-top: 2vh;
+    margin-top: 3vh;
     color: white;
     font-size: 2vh;
+    padding:0;
 }
 
 #Events {
-    margin-top:2vh;
+    margin-top:3vh;
     color: white;
     font-size: 2vh;
+    padding: 0;
 }
 
 #SignUp {
